# apptest

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: BadAct.kt  DataCentor.kt  MainActivity.kt
app/src/main/java/com/example/myapplication/content/: CameraDistanceProvider.kt
app/src/main/java/com/example/myapplication/player/: Dispat.java  FFPackage.kt  Result.kt
app/src/main/java/com/example/myapplication/ui/: PullRefreshLayout.kt
app/src/main/res/layout/: bad_layout.xml  main_layout.xml  refresh_view.xml
app/src/main/res/values/: themes.xml
cppGame/: build.gradle
cppGame/src/androidTest/java/com/example/cppgame/: ExampleInstrumentedTest.kt
cppGame/src/main/: AndroidManifest.xml
cppGame/src/main/cpp/: CMakeLists.txt
cppGame/src/test/java/com/example/cppgame/: ExampleUnitTest.kt
exoplayer/: build.gradle
exoplayer/src/main/: AndroidManifest.xml
exoplayer/src/main/java/com/google/android/exoplayer2/: Bundleable.java  C.java  DefaultRenderersFactory.java  DeviceInfo.java  ExoPlayer.java  ExoPlayerImplInternal.java  Format.java  (+5 more)
exoplayer/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
nanoserver/: build.gradle
nanoserver/src/androidTest/java/com/example/nanoserver/: ExampleInstrumentedTest.kt
nanoserver/src/main/: AndroidManifest.xml
nanoserver/src/main/java/com/example/nanoserver/: HttpServerV1.kt  Responser.kt  config.kt
nanoserver/src/main/res/values/: strings.xml
nanoserver/src/test/java/com/example/nanoserver/: ExampleUnitTest.kt
(+531 files in other folders)
